# etui

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
apps/desktop-tauri/: index.html  package.json  tsconfig.json
apps/desktop-tauri/src/: main.tsx  styles.css
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json  vault-local.sqlite3
apps/desktop-tauri/src-tauri/src/: main.rs
apps/etui-desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/etui-desktop/src/: index.css  main.tsx  styles.css  types.ts
apps/etui-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/etui-desktop/src-tauri/icons/: icon.icns
apps/etui-desktop/src-tauri/src/: main.rs
apps/etui-desktop/src/components/: UnlockScreen.tsx  WorkspaceView.tsx
apps/etui-desktop/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  textarea.tsx
crates/etui-core/: Cargo.toml
crates/etui-core/src/: model.rs  ports.rs  sync.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs
crates/sync-supabase/: Cargo.toml
crates/sync-supabase/src/: lib.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: crypto.rs  lib.rs  service.rs
docs/: spec-sync-contract.md  spec-vault-format.md  supabase-schema.sql  threat-model.md
