[workspace]
members = [
  "crates/etui-core",
  "crates/storage-sqlite",
  "crates/sync-supabase",
  "apps/etui-desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1.16", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
unwrap_used = "deny"
