[package]
name = "etui-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2 = "0.5"
async-trait.workspace = true
chacha20poly1305 = "0.10"
chrono.workspace = true
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["sync"] }

[lints]
workspace = true
