[package]
name = "storage-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
rusqlite = { version = "0.33", features = ["bundled"] }
uuid.workspace = true
etui-core = { path = "../etui-core" }

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
