[package]
name = "sync-supabase"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
chrono.workspace = true
dotenvy = "0.15"
etui-core = { path = "../etui-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
mockito = "1.7"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
