[package]
name = "desktop-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow.workspace = true
serde.workspace = true
tauri = { version = "2.8.5", features = [] }
storage-sqlite = { path = "../../../crates/storage-sqlite" }
uuid.workspace = true
vault-core = { path = "../../../crates/vault-core" }

[lints]
workspace = true
