[package]
name = "etui-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.8.5", features = [] }
storage-sqlite = { path = "../../../crates/storage-sqlite" }
sync-supabase = { path = "../../../crates/sync-supabase" }
uuid.workspace = true
etui-core = { path = "../../../crates/etui-core" }

[package.metadata.tauri]

[lints]
workspace = true
